--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,10 +29,8 @@ jobs:
       run: ./gradlew build
 
     - name: Build and Push Docker Image
-      uses: mr-smithers-excellent/docker-build-push@v4
-      with:
-        image: sudhirpatel/demo-app
-        registry: docker.io
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-         
+      run: |
+         docker build -t sudhirpatel/demo-app:new1 .
+         docker login
+         docker tag demo-app-1 sudhirpatel/demo-app:new1  # Only if needed
+         docker push sudhirpatel/demo-app:new1
